# macro-lens-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build_and_test.yaml  build_and_test.yml
lens/: Cargo.toml  README.md
lens-derive/: Cargo.toml  LICENSE  README.md
lens-derive/src/: lib.rs
lens-macros/: Cargo.toml  README.md
lens-macros/src/: lib.rs
lens/src/: core.rs  lens.rs  lib.rs  macros.rs  path.rs
lens/tests/: lib.rs  ui.rs
lens/tests/ui/fail/: invalid_root.rs  invalid_root.stderr  non_vec_index.rs  non_vec_index.stderr  tuple_struct.rs  tuple_struct.stderr
lens/tests/ui/pass/: pub_crate_visibility.rs  vec_indexing.rs
