[workspace]
members = ["lens", "lens-derive", "lens-macros"]
resolver = "3"

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["Chris Campbell <campbell@plausible.coop>", "Julius Foitzik <info@accountr.eu>"]
repository = "https://github.com/daemonfire300/macro-lens-rs"
homepage = "https://github.com/daemonfire300/macro-lens-rs"
readme = "README.md"
keywords = ["lens", "functional", "macros"]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
trybuild = "1.0"

[workspace.metadata.crane]
name = "macro-lens-workspace"
