[package]
name = "macro-lens-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Provides procedural `derive` macros that are used in conjuction with the `lens` crate."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/macro-lens-derive"
readme = "README.md"

[lib]
name = "lens_derive"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
