[package]
name = "pl-lens-macros"
version = "2.0.0"
edition = "2024"
authors = ["Chris Campbell <campbell@plausible.coop>", "Julius Foitzik <info@accountr.eu>"]
license = "MIT"
description = "Temporary crate used to implement the `lens!` procedural macro."
keywords = ["plausible", "lens", "functional"]
homepage = "https://github.com/daemonfire300/lens-rs"
repository = "https://github.com/daemonfire300/lens-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
