[package]
name = "macro-lens-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Temporary crate used to implement the `lens!` procedural macro."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/macro-lens-macros"
readme = "README.md"

[lib]
name = "lens_macros"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
