[package]
name = "macro-lens"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Provides support for lenses, which are a mechanism in functional programming for focusing on a part of a complex data structure."
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/macro-lens"
readme = "README.md"

[lib]
name = "lens"

[dependencies]
lens-derive = { package = "macro-lens-derive", path = "../lens-derive", version = "2.0.0" }
lens-macros = { package = "macro-lens-macros", path = "../lens-macros", version = "2.0.0" }

[dev-dependencies]
trybuild.workspace = true
